--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -63,6 +63,7 @@
                                       <span class="col-lg-7 value"> <?= $this->product_views ?></span>
                                      </div>
 
+                                    <?php /** 
                                      <div class="row">
                                       <span class=" col-lg-5" > 
                                       package type
@@ -77,7 +78,7 @@
                                       }?>
                                       </span>
                                      </div>
-                                
+                                    **/ ?>
                                     <div class="row" style="padding-top: 5px">
                                       <div class="col-lg-12">
                                         <div class="small " id="product-actions">
