--- a/application/modules/default/views/scripts/donate/index.phtml
+++ b/application/modules/default/views/scripts/donate/index.phtml
@@ -60,8 +60,8 @@ form .SelectionGroup li label {
                 <div class="sidebar-left col-md-2"></div>
                 <div class="content col-md-8">
                     <h2>Please help us</h2>
-                    We would like to support the creatives on our platform. That's why we have introduced <a href="/plings">pling</a>. The number of dowloads multiplied by the pling factor gives the amount which is paid out monthly via PayPal.
-                    We have been supporting our creatives this way since May 2017.
+                    <p>Since May 2017 we support the creatives on our platform. That's why we have introduced <a href="/plings">pling</a>. The number of dowloads multiplied by the pling factor gives the amount which is paid out monthly via PayPal to our contributers.
+                    </p>
                     <p>Please help us with a donation.</p>
                     
                     
@@ -112,7 +112,7 @@ form .SelectionGroup li label {
                             </ul>
                         </fieldset>
                         <div class="Actions">
-                            <input type="submit" name="action_paypal" value="Pay with PayPal" class="action" id="action_paypal">
+                            <input type="submit" name="action_paypal" value="Donate with PayPal" class="action" id="action_paypal">
                         </div>
                     </form>
                 </div>
