--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -42,6 +42,26 @@ table.tablestati td.number{
       width: 80px;
       padding-right: 10px;
   }
+
+  path { 
+    stroke: steelblue;
+    stroke-width: 2;
+    fill: none;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
+}
+
+.legend {
+    font-size: 16px;
+    font-weight: bold;
+    text-anchor: middle;
+}
 </style>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
@@ -51,6 +71,8 @@ table.tablestati td.number{
 <div class="pling-nav-tabs">
 <ul class="nav nav-tabs ">
  <li class="active"><a class="newuserprojectTab" href="#d3-line" data-toggle="tab">New Members & Projects </a></li>
+ <li ><a class="downloadsdailyTab" href="#downloadsdailyTab" data-toggle="tab">Downloads daily</a></li> 
+ <li ><a class="topDownloadsPerDayTab" href="#topDownloadsPerDayTab" data-toggle="tab">Top Download/Day</a></li>
  <li ><a class="payoutTab" href="#payoutTab" data-toggle="tab">Payout</a></li> 
  <li ><a class="payoutNewcomerTab" href="#payoutNewcomerTab" data-toggle="tab">Payout Newcomer</a></li> 
  <li ><a class="payoutNewloserTab" href="#payoutNewloserTab" data-toggle="tab">Payout Newloser</a></li> 
@@ -67,6 +89,31 @@ table.tablestati td.number{
         <div id='d3linelableinline'></div>
         
     </div>
+  </div>
+
+  <div id="downloadsdailyTab" class="tab-pane">
+  <span style="float: left">#number of months back</span>
+     <select id="numofmonthback" style="float: left">
+       <option>2</option>
+       <option selected>3</option>
+       <option>4</option>
+       <option>5</option>
+       <option>6</option>
+       <option>7</option>
+       <option>8</option>
+       <option>9</option>
+       <option>10</option>
+       <option>11</option>
+       <option>12</option>
+     </select>
+     <div id="downloadsdailyTabContainer"></div>
+  </div>
+
+   <div id="topDownloadsPerDayTab" class="tab-pane ">        
+        <div style="float: left; display: block;clear: both">
+            <input  name="filterTopDownloadsDate" id="filterTopDownloadsDate" value="2017-09-30"></input><button class="filterTopDownloadsDate">go!</button>
+        </div>
+        <div id="topDownloadsPerDayTabContainer"></div>                
   </div>
 
    <div id="payoutTab" class="tab-pane ">
@@ -127,6 +174,33 @@ table.tablestati td.number{
              });
        
             
+            $(".downloadsdailyTab").click(function() {
+                $('#downloadsdailyTabContainer').empty();
+                $.getScript("/theme/flatui/js/stati/downloadsdaily.js");                
+            });
+           $('#numofmonthback').change(function() {                                     
+                 $.getScript("/theme/flatui/js/stati/downloadsdaily.js");               
+            });
+            
+        // topdownloadsperdate           
+               
+            $('button.filterTopDownloadsDate').click(function() {                                                       
+                    $('.topDownloadsPerDayTab').trigger('click');
+               });
+              $(".topDownloadsPerDayTab").click(function() {
+                  $('#topDownloadsPerDayTabContainer').empty();      
+                   let date = $( "#filterTopDownloadsDate" ).val();               
+                   $.getJSON( "/backend/index/gettopdownloadsperdate?date="+date, function( response ) {
+                        let data = response.results;
+                         let table = "<table class='tablestati'>";
+                         $.each( data, function( index, value ){
+                               table = table+'<tr><td><a target="_blank" href="https://opendesktop.org/p/'+value.project_id+'">'+value.project_id+'</a></td><td class="number">'+value.cnt+'</td></tr>';
+                         });      
+                        table = table +"</table>";                                              
+                         $('#topDownloadsPerDayTabContainer').html(table);                        
+                   });  
+              });
+
             $('#payoutTab').prepend(createMonthFilter('selectmonth'));
              $('#selectmonth').change(function() {                                     
                    $.getScript("/theme/flatui/js/stati/memberPayout.js");               
