--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -216,13 +216,11 @@ $userRoleName = $helperUserRole->userRole();
                      
                 ?>
 
-           <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
-              <?php if (Default_Model_DbTable_MemberRole::ROLE_NAME_ADMIN == $userRoleName) : ?>
-               <li><a  id="plingList" href="#plings" > Pling-List</a> </li>
-              <?php endif; ?>
-               <li><a href="http://blog.opendesktop.org/" target="_blank"> Blog</a> </li>
+            <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">             
                <li><a href="http://forum.opendesktop.org/" target="_blank"> Forum</a> </li>
+               <li><a href="http://blog.opendesktop.org/" target="_blank"> Blog</a> </li>  
+               <li><a  id="plingList" href="#plings" > What are Plings? </a> </li>             
                <li> <a id="aboutContent" href="#">About </a>   </li>              
-               </ul>
+            </ul>
         </div>
 
