--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -34,22 +34,38 @@
         foreach ($this->featureProducts as $this->product): ?>            
                     <div style=" " class="feature_container">                      
                         
-                            <span  class="feature_title"> Featured Product</span>
+                            <span  class="feature_title">In the Spotlight</span>
                          
                         <div  class="main_container">
                                
                              <span class="small label label-info label_featured" style="float: right; <?php if($this->product['featured']<>1) echo 'visibility:hidden'; ?>">                                    
                                     Featured
                             </span>   
-                           
+                                                        
+                              <a class="feature_image"  title="<?=$helpTruncate->truncate($this->product['description'], 200, '...', false, true)?>" href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>">
+                                 <img  src="<?=$helpImage->Image($this->product['image_small'], array('width' => 300, 'height' => 230 ,'crop' => 1))?>"  />
+                              </a>
 
-                            <a class="feature_image"  title="<?=$helpTruncate->truncate($this->product['description'], 200, '...', false, true)?>" href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>">
-                               <img  src="<?=$helpImage->Image($this->product['image_small'], array('width' => 300, 'height' => 230 ,'crop' => 1))?>"  />
-                            </a>
                                <div class="feature_text" >
-                               <a href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>"><?=$this->product['title']?></a>
-                               <span  class="feature_text_title" ><?=$helpCategories->fetchCategoriesForProductAsString($this->product['project_id'])?> </span>
-
+                               <div style="display: flex">
+                                        <div style="width:340px"><a href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>"><?=$this->product['title']?></a>
+                                                  <span  class="feature_text_title" ><?=$helpCategories->fetchCategoriesForProductAsString($this->product['project_id'])?> </span>
+                                        </div>
+                                        <div style="flex: 1; text-align: right; width: 80px;padding-right:10px;padding-top: 5px;">
+                                              <div class="rating" style="font-size: small;">
+                                                  <?php                
+                                                          $this->widgetRating = new stdClass();
+                                                          $this->widgetRating->project_id = $this->product['project_id'];
+                                                          $this->widgetRating->laplace_score = $this->product['laplace_score'];
+                                                          $this->widgetRating->count_likes = $this->product['count_likes']; 
+                                                          $this->widgetRating->count_dislikes =$this->product['count_dislikes'];
+                                                          echo $this->render('partials/widgetRating.phtml'); 
+                                                  ?>
+                                              </div>
+                                              <span class="time text-center" style="font-size: smaller;display: block"><?=$helpDate->printDate($this->product['changed_at']==null?$this->product['created_at']:$this->product['changed_at'])?>
+                                              </span>
+                                        </div>
+                                </div>
                                <div class="feature_text_auth" >
                                <a  class="auto_link" href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id']); ?>" >
                                    <figure >
@@ -58,20 +74,7 @@
                                </a>
                                   <span class="created_by" > created by <?php echo $this->product['username']; ?> </span>
 
-                                  <div style="display: block;float: right; width: 80px;padding-right:10px;">
-                                        <div class="rating" style="font-size: small;">
-                                            <?php                
-                                                    $this->widgetRating = new stdClass();
-                                                    $this->widgetRating->project_id = $this->product['project_id'];
-                                                    $this->widgetRating->laplace_score = $this->product['laplace_score'];
-                                                    $this->widgetRating->count_likes = $this->product['count_likes']; 
-                                                    $this->widgetRating->count_dislikes =$this->product['count_dislikes'];
-                                                    echo $this->render('partials/widgetRating.phtml'); 
-                                            ?>
-                                        </div>
-                                        <span class="time text-center" style="font-size: smaller;display: block"><?=$helpDate->printDate($this->product['changed_at']==null?$this->product['created_at']:$this->product['changed_at'])?>
-                                        </span>
-                                  </div>
+                                  
                                </div>
                               
 
@@ -94,7 +97,7 @@
                                   <div style="clear: left"></div>
                                   <span class="button_next small">
                                          <a type="button" class="ajaxPartialFeatureProduct" style="padding-right: 20px" href="/showfeatureajax/page/0">random</a>                                          
-                                         <a type="button" class="ajaxPartialFeatureProduct" href="/showfeatureajax/page/1">next</a>                                          
+                                         <a type="button" class="ajaxPartialFeatureProduct" href="/showfeatureajax/page/1">featured</a>                                          
                                  </span>   
 
                           </div>      
