--- a/application/modules/default/views/scripts/product/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/projectplings.phtml
@@ -46,10 +46,10 @@ $heartatt = $heartatt. 'role="button" data-fragment=""  '
 	      .' data-auth="'.$member_id.'"';
 $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.'>';
  if ($isPlinged){
-      $out = $out. '<img src="/images/system/coin.png" ></img>';
+      $out = $out. '<img src="/images/system/starcoin-grey-empty.png" ></img>';
       $out = $out. '<span class="heartnumber heartnumberpurple" >'.$cntplings.'</span>';
  }else{            
-      $out = $out. '<img src="/images/system/coin.png"></img>';
+      $out = $out. '<img src="/images/system/starcoin-grey-empty.png"></img>';
       $out = $out. '<span class="heartnumber" >'.$cntplings.'</span>';
  }
 
