--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1846,6 +1846,7 @@ ul.meta-nav-top
           position:relative;
           color:#C8C8C8; 
           font-size: 35px;
+           display: block;
          
         }
        
