--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -277,8 +277,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                           
                             <div class="product-title-right" >
 
-                                  
-
+<?php /*                                  
                                 <div class="projectdtailHeart">
                                     <div id="container-pling<?=$this->product->project_id?>" class="container-pling">     
                                     <?php                                 
@@ -292,7 +291,8 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                     ?>                                
                                     </div>                                                  
                                 </div>
-
+*/
+?>
                                 <div class="projectdtailHeart">
                                         <div id="container-follow<?=$this->product->project_id?>" class="container-pling">     
                                         <?php                                 
@@ -305,14 +305,12 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                             );                                
                                         ?>                                
                                         </div>                                                        
-                                    </div>
+                                </div>
                                   
-                                 
-
                                     
-                                    <div class="projectdetailRating" style="clear: right">
-                                    <?php echo $this->render('partials/sidebarRating.phtml'); ?>
-                                    </div>
+                                <div class="projectdetailRating" style="clear: right">
+                                        <?php echo $this->render('partials/sidebarRating.phtml'); ?>
+                                </div>
                             </div>
                         </div>
                         <div id="carouselContainer" class="carouselContainer">
@@ -618,6 +616,8 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                         */
                         ?>
 
+
+
                         <?php if (empty($this->product->claimable)) { ?>
                             <div class="prod-widget-box prod-user right ">
                                 <div class="sidebar-content">
@@ -648,6 +648,22 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                 </div>
                             </div>
                         <?php } ?>
+
+                        <div class="prod-widget-box prod-user right ">
+                                <div class="projectdtailHeart">
+                                    <div id="container-pling<?=$this->product->project_id?>" class="container-pling" >     
+                                    <?php                                 
+                                        echo $this->partial(
+                                            '/product/partials/projectplings_test.phtml',
+                                            array(
+                                                "authMember"  => $identity,
+                                                "project_id" => $this->product->project_id
+                                            )
+                                        );                                
+                                    ?>                                
+                                    </div>                                                  
+                                </div>
+                        </div>
 
                         <?php /* echo $this->render('partials/sidebarRating.phtml');  */ ?>
                           <?php /*
