--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -649,7 +649,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                             </div>
                         <?php } ?>
 
-                        <div class="prod-widget-box prod-user right ">
+                        <div class="prod-widget-box right ">
                                 <div class="projectdtailHeart">
                                     <div id="container-pling<?=$this->product->project_id?>" class="container-pling" >     
                                     <?php                                 
